[package]
name = "mcrputil"
version = "1.1.4"
description = "Encrypt, minify or decrypt, pretty-print resource packs for Minecraft."
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
aes = "0.8.2"
cfb8 = "0.8.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.91"
rand = "0.8.5"
glob = "0.3.0"

[patch.crates-io]
serde_json = { git = "https://github.com/valaphee/serde_json" }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
