[package]
name = "mcrputil"
version = "1.2.0"
edition = "2021"
authors = ["Valpahee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/mcrputil.git"
description = "Minecraft Resource Pack Util for encrypting and decrypting resource packs."

[dependencies]
aes = "0.8.2"
anyhow = "1.0.69"
cfb8 = "0.8.1"
clap = { version = "4.1.8", features = ["derive"] }
glob = "0.3.1"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
wildmatch = "2.1.1"

[patch.crates-io]
serde_json = { git = "https://github.com/valaphee/serde_json" }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
